--- a/app.json
+++ b/app.json
@@ -1,8 +1,12 @@
 {
   "expo": {
-    "name": "la-hejo",
+    "name": "La Hejo",
     "slug": "la-hejo",
-    "platforms": ["ios", "android", "web"],
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -15,7 +19,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -33,6 +39,8 @@
         "appId": "1:781851522642:web:38fef9f08c59cd4c50518b",
         "measurementId": "G-KN8WMJW77G"
       }
-    }
+    },
+    "description": "A plant shop app - lahejo.co",
+    "githubUrl": "https://github.com/diszy10/la-hejo"
   }
 }
